2016-03-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2803: Make system CUPS optional
	* INSTALL: Document --enable-system-cups.
	* Makefile.am:
	(ICEDTEA_ENV): Set SYSTEM_CUPS to the
	value of ENABLE_SYSTEM_CUPS rather than 'true'.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_CHECK_FOR_CUPS): Only check for the library
	if --enable-system-cups is on.

2016-03-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2781, CA195: typeinfo.cpp: typeinfo_merge_nonarrays:
	Assertion `dest && result && x.any && y.any' failed
	* Makefile.am:
	(ICEDTEA_PATCHES): Add new patch.
	* NEWS: Updated.
	* patches/cacao/pr2781-refactoring_error.patch:
	Backport of refactoring fix from
	https://bitbucket.org/Ringdingcoder/cacao-staging

2016-01-25  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add 2.6.4 release notes.

2016-01-06  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2684: AArch64 port not selected on architectures
	where host_cpu != aarch64
	* acinclude.m4:
	(IT_HAS_NATIVE_HOTSPOT_PORT): Depend on
	IT_SET_ARCH_SETTINGS and use values of
	INSTALL_ARCH_DIR to determine port availability
	rather than host_cpu.

2015-10-15  Stefan Ring <stefan@complang.tuwien.ac.at>

	PR2652: CACAO fails as a build VM for icedtea
	* Makefile.am:
	(ICEDTEA_PATCHES): Add CACAO patch for PR2652.
	* README: Fix CACAO URL.
	* patches/cacao/pr2652-classloader.patch:
	Set classLoader field in java.lang.Class as expected by JDK.

2015-11-20  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am,
	(CORBA_CHANGESET): Update to icedtea-2.7.0pre04.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to 2.7.0pre04.